#490 Fixed panning problem in IE, where it would overlap graph with the menu bar. Also fixed two show stoppers in FF and IE, from known browser issues.

--- a/biomixer/war/d3_graphs/d3_graph.css
+++ b/biomixer/war/d3_graphs/d3_graph.css
@@ -11,6 +11,11 @@
   
 }
 
+#chart {
+	fill: white;
+	overflow: hidden;
+}
+
 .centralNode {
   stroke-width: 2;
   stroke-opacity: 1;
@@ -737,6 +742,7 @@ div#undo_redo_breadcrumb_label {
 .panCanvas {
     cursor: move;
 }
+
 
 /*
 .minimapFrame{
